Add footer pages with no content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,38 +2,31 @@
   <div class="footer">
     <div class="container">
       <div class="row row-normal">
-        <div class="col-md-3 col-xs-6">
-          <h3>Themen</h3>
-          <ul>
-            <li><a href="#">Offene Daten</a></li>
-            <li><a href="#">Offene Wissenschaft</a></li>
-            <li><a href="#">Offene Kulturgüter</a></li>
-            <li><a href="#">Informationsfreiheit</a></li>
-            <li><a href="#">Civic Technology</a></li>
+        <div class="col-md-8">
+          <ul class="footer-links">
+            <li>
+              <a href="{{ site.baseurl }}team/">Team</a>
+            </li>
+            <li>
+              <a href="{{ site.baseurl }}vorstand/">Vorstand</a>
+            </li>
+            <li>
+              <a href="{{ site.baseurl }}verein/">Verein</a>
+            </li>
+            <li>
+              <a href="{{ site.baseurl }}spenden/">Spenden</a>
+            </li>
+            <li>
+              <a href="{{ site.baseurl }}presse/">Presse</a>
+            </li>
+            <li>
+              <a href="{{ site.baseurl }}impressum/">Impressum</a>
+            </li>
           </ul>
         </div>
-        <div class="col-md-3 col-xs-6">
-          <h3>Projekte</h3>
-          <ul>
-            <li><a href="#">Frag den Staat</a></li>
-            <li><a href="#">Offener Haushalt</a></li>
-            <li><a href="#">Entwicklungsbarometer</a></li>
-            <li><a href="#">Offene Ratsinformation</a></li>
-            <li><a href="#">Offenes Parlament</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-xs-6">
-          <h3>Community</h3>
-          <ul>
-            <li><a href="#">Code for Germany</a></li>
-            <li><a href="#">Jugend hackt</a></li>
-            <li><a href="#">Coding da Vinci</a></li>
-            <li><a href="#">Hacks and the City</a></li>
-            <li><a href="#">Mailinglisten</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-xs-6">
-          <h3>Kontakt</h3>
+        <div class="col-md-4">
+
+          <!-- Social Media Icons -->
 
         </div>
       </div>
