--- a/static/style/icons.css
+++ b/static/style/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/icons.eot?65880541');
-  src: url('../font/icons.eot?65880541#iefix') format('embedded-opentype'),
-       url('../font/icons.woff?65880541') format('woff'),
-       url('../font/icons.ttf?65880541') format('truetype'),
-       url('../font/icons.svg?65880541#fontello') format('svg');
+  src: url('../fonts/icons.eot?65880541');
+  src: url('../fonts/icons.eot?65880541#iefix') format('embedded-opentype'),
+       url('../fonts/icons.woff?65880541') format('woff'),
+       url('../fonts/icons.ttf?65880541') format('truetype'),
+       url('../fonts/icons.svg?65880541#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
