Fix lots of little things, refactor css

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
 {% assign author = site.data.team | where:"name",page.author | first %}
 
-<div class="top-box col-center">
+<div class="lurking-header">
   <div class="post-author">
     <img src="{{ site.baseurl }}static/images/team/{{ author.img }}_square.jpg" alt="{{ author.name }}" class="img-circle">
     <p class="post-meta">
