--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="hidden-print">
   <div class="footer">
     <div class="container">
-      <div class="row row-normal">
-        <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-10">
           <ul class="footer-links">
             <li>
               <a href="{{ site.baseurl }}team/">Team</a>
@@ -24,9 +24,9 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
 
-          <!-- Social Media Icons -->
+          <a href="https://twitter/okfde"><i class="icon-twitter-1"></i></a>
 
         </div>
       </div>
@@ -34,15 +34,15 @@
   </div>
   <div class="cellar">
     <div class="container">
-      <div class="row row-normal">
-        <div class="col-xs-12 col-md-8">
+      <div class="row">
+        <div class="col-md-8">
           <p>
             Open Knowledge Foundation Deutschland e.V. ist ein eingetragener
             Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
             sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
           </p>
         </div>
-        <div class="col-md-2 col-md-offset-2 col-xs-8 col-xs-offset-4">
+        <div class="col-md-3 col-md-offset-1">
             <a href="{{ site.baseurl }}">
               <img src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V.">
             </a>
