--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,6 +1,6 @@
 {% assign person=include.person %}
 <div class="row" id="{{ person.name | slugify | uri_escape }}">
-  <div class="col-sm-4 col-xs-12">
+  <div class="col-md-4 col-xs-12">
     <div class="box person-image" style="background-image:url('{{ site.baseurl }}static/images/team/{{ person.img }}.jpg')">
     </div>
   </div>
@@ -14,13 +14,13 @@
       {% if person.twitter %}
         <dt><i class="icon-twitter-1"></i></dt>
         <dd>
-          <a href="https://twitter.com/{{ person.twitter }}">@{{ person.twitter }}</a>
+          <a href="https://twitter.com/{{ person.twitter }}">{{ person.twitter }}</a>
         </dd>
       {% endif %}
       {% if person.github %}
         <dt><i class="icon-github"></i></dt>
         <dd>
-          <a href="https://github.com/{{ person.github }}">{{ person.github }} on GitHub</a>
+          <a href="https://github.com/{{ person.github }}">{{ person.github }}</a>
         </dd>
       {% endif %}
       {% if person.website %}
