--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 
 ---
 
-<div class="top-box col-center">
+<div class="lurking-header">
   <h1>{{ page.title }}</h1>
 
   {{ content }}
