--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 menu_projekte: yes
 
 ---
-<div class="top-box col-center">
+<div class="lurking-header">
   <h1>{{ page.title }}</h1>
   {{ content }}
 
@@ -20,6 +20,9 @@ menu_projekte: yes
       {% endif %}
     </div>
     <div class="col-md-6">
+      {% if contact.website %}
+
+      {% endif %}
     </div>
   </div>
 </div>
