--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -626,3 +626,16 @@ a:hover h3 {
 .btn-default {
   color: #000;
 }
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
