--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -630,7 +630,8 @@ a:hover h3 {
 .videoWrapper {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
+	padding-top: 0px;
+  margin-bottom: 20px;
 	height: 0;
 }
 
