--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -642,3 +642,13 @@ a:hover h3 {
 	width: 100%;
 	height: 100%;
 }
+
+.project-item h3 {
+  font-size: 22px;
+  color: #112233;
+}
+
+.project-item p {
+  font-size: 18px;
+  color: #535b63;
+}
