Replace bulky URL with label for mailinglist on projects

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -61,7 +61,7 @@ menu_projekte: yes
     {% if page.contact.mailinglist %}
       <dt><i class="icon-paper-plane"></i></dt>
       <dd>
-        <a href="{{ page.contact.mailinglist }}">{{ page.contact.mailinglist }}</a>
+        <a href="{{ page.contact.mailinglist }}">Mailingliste</a>
       </dd>
     {% endif %}
   </dl>
