--- a/_includes/person.html
+++ b/_includes/person.html
@@ -36,6 +36,30 @@
         </dd>
       {% endif %}
       </dl>
+      {% assign has_projects = 0 %}
+        {% for project in site.projects | sort:"featured","last" %}
+          {% if project.type != "active" %}
+            {% for p in project.people %}
+              {% if p.name == person.name %}
+                {% if has_projects == 0 %}
+                  {% assign has_projects = 1 %}
+                  <small>
+                    {{ person.name | split: " " | first }} arbeitet an:
+                    <ul class="list-inline">
+                {% endif %}
+                <li>
+                  <a href="{{ site.baseurl }}{{ project.url|replace_first:'/','' }}">
+                    {{ project.title }}
+                  </a>
+                </li>
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        {% endfor %}
+        {% if has_projects == 1 %}
+          </ul>
+        {% endif %}
+      </small>
     </div>
   </div>
 </div>
