Corrected minor typo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-2">
 
-          <a href="https://twitter/okfde"><i class="icon-twitter-1"></i></a>
+          <a href="https://twitter.com/okfde"><i class="icon-twitter-1"></i></a>
 
         </div>
       </div>
