added website designers to footer, plcaed newsletter signup more prominently

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,6 +41,8 @@
             Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
             sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
           </p>
+          <p>
+            Webseitendesign: <a href="http://nadinestammen.de/">Nadine Stammen</a>, Felix Bauer, <a href="http://stefanwehrmeyer.com/">Stefan Wehrmeyer</a>
         </div>
         <div class="col-md-3 col-md-offset-1">
             <a href="{{ site.baseurl }}">
