--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
             sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
           </p>
           <p>
-            Webseitendesign: <a href="http://nadinestammen.de/">Nadine Stammen</a>, Felix Bauer, <a href="http://stefanwehrmeyer.com/">Stefan Wehrmeyer</a>
+            Webseitendesign: <a href="http://nadinestammen.de/">Nadine Stammen</a>, Felix Becker, <a href="http://stefanwehrmeyer.com/">Stefan Wehrmeyer</a>
         </div>
         <div class="col-md-3 col-md-offset-1">
             <a href="{{ site.baseurl }}">
