moved donation link from footer to navigation

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,9 @@
         <li{% if page.menu_services %} class="active"{% endif %}>
           <a class="nav-link" href="{{ site.baseurl }}services/">Services</a>
         </li>
+        <li{% if page.menu_community %} class="active"{% endif %}>
+          <a class="nav-link" href="{{ site.baseurl }}spenden/">Spenden</a>
+        </li>
       </ul>
     </div>
     {% if page.headline %}
