--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,9 @@
             <li>
               <a href="{{ site.baseurl }}presse/">Presse</a>
             </li>
+            <!--><li>
+              <a href="{{ site.baseurl }}Jobs/">Jobs</a>
+            </li><!-->
             <li>
               <a href="{{ site.baseurl }}impressum/">Impressum</a>
             </li>
