--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -54,6 +54,10 @@ h1, h2, h3, h4 {
   letter-spacing: 2px;
 }
 
+img {
+  max-width: 100%;
+}
+
 a, a:hover, a:focus {
   color: #333;
   font-weight: bold;
