--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -1,15 +1,14 @@
 {% assign project = include.project %}
 {% assign style = include.style %}
 
-<a class="project-item {% if project.wideimage %}col-md-8{% else %}col-md-4{% endif %} col-sm-6 col-xs-12 {{ style }}" href="{{ site.baseurl }}{{ project.url|replace_first:'/','' }}">
-  <div class="box box-image box-{{ project.type }}">
-    <div class="box-image-inner{% unless project.img.size > 0 %} box-color{% endunless %}" {% if project.img.size > 0 %}style="background-image: url('{{ site.staticurl }}images/{{ project.img }}');'"{% endif %}>
-    </div>
-    <div class="inner">
-      <h3>{{ project.title }}</h3>
-      {% unless style == 'mini' %}
-        <p>{{ project.subtitle }}</p>
-      {% endunless %}
-    </div>
-  </div>
-</a>
+<div class="project-item flex-col {% if project.wideimage %}col-md-8{% else %}col-md-4{% endif %} col-sm-6 col-xs-12">
+	<div class="project-box {{ style }}">
+		<a href="{{ site.baseurl }}{{ project.url|replace_first:'/','' }}">
+			<div class="project-box-image{% unless project.img.size > 0 %} project-box-color{% endunless %}" {% if project.img.size> 0 %}style="background-image: url('{{ site.staticurl }}images/{{ project.img }}');'"{% endif %}></div>
+			<div class="project-box-inner">
+				<h3>{{ project.title }}</h3>
+				{% unless style == 'mini' %}<p>{{ project.subtitle }}</p>{% endunless %}
+			</div>
+		</a>
+	</div>
+</div>
