--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,37 @@
----
-layout: base
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }} &gt; Open Knowledge Foundation Deutschland</title>
+  <meta name="description" content="{{ page.description }}"/>
+  <link href="{{ site.staticurl }}style/style.css" rel='stylesheet' type='text/css'>
+  <link rel="alternate" type="application/atom+xml" title="Blog der Open Knowledge Foundation Deutschland." href="{{ site.baseurl }}atom.xml"/>
+  <link rel="shortcut icon" href="{{ site.staticurl }}images/favicon.ico">
+</head>
+<body>
 
----
+{% include header.html %}
 
-<div class="container">
-  {{ content }}
-</div>
+<main id="cd-main-content">
+  <nav class="navbar navbar-okfn" role="navigation">
+    <div class="container">
+      {% if page.headline %}
+      <h1 class="header-headline">{{ page.headline }}</h1>
+      {% endif %}
+    </div>
+  </nav>
+  <div class="container">
+    {{ content }}
+  </div>
+  {% include footer.html %}
+</main>
+
+{% include sidebar.html %}
+
+<script src="{{ site.staticurl }}js/jqlite.min.js"></script>
+<script src="{{ site.staticurl }}js/index.js"></script>
+{% include piwik.html %}
+
+</body>
+</html>
