--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,15 @@
 ---
 layout: default
+menu_blog: yes
 
 ---
 
 {% assign author = site.data.team | where:"name",page.author | first %}
 
-<div class="lurking-header">
+<div class="lurking-header post">
+
   <div{% if author.img %} class="post-author"{% else %} class="post-nonteam-author" {% endif %}>
-    {% if author.img %}
-      <img src="{{ site.baseurl }}static/images/team/{{ author.img }}_square.jpg" alt="{{ author.name }}" class="img-circle">
-    {% endif %}
+    {% if author.img %}<img src="{{ site.baseurl }}static/images/team/{{ author.img }}_square.jpg" alt="{{ author.name }}" class="img-circle">{% endif %}
     <p class="post-meta">
       {% if author.name %}
       von <a href="{{ site.baseurl }}{% if author.staff %}team{% else %}vorstand{% endif %}#{{ author.name | slugify }}">{{ author.name }}</a><br/>
@@ -17,39 +17,46 @@ layout: default
       von {{ page.author }}
       {% endif %}
       am {{ page.date | date:"%d.%m.%Y" }}
+  <ul class="post-tags">
+    {% for tag in page.tags %}
+    <li><span class="badge">{{ tag }}</span></li>
+    {% endfor %}
+  </ul>
     </p>
   </div>
 
   <h1>{{ page.title }}</h1>
 
   {% if page.image %}
-  <div class="post-image-full">
-    <img src="{{ page.image.src }}" alt="{{ page.image.title }}"/>
-  </div>
+  <div class="post-image-full" style="background-image: url({{ page.image.src }});" title="{{ page.image.title }}"></div>
   {% endif %}
 
-  {{ content }}
+  <div class="post-content">{{ content }}</div>
 </div>
 
-<div class="row broad-header">
+<div class="row broad-header post">
   {% if page.previous.url and page.next.url %}
     {% assign cols=2 %}
-  <div class="col-xs-offset-1 col-xs-10">
+  <div class="col-md-12">
   {% else %}
     {% assign cols=1 %}
-  <div class="col-xs-offset-3 col-xs-6">
+  <div class="col-md-offset-3 col-md-6">
   {% endif %}
     <div class="row">
       {% if page.previous.url %}
-        <div class="{% if cols == 2 %}col-xs-6{% else %}cols-xs-12{% endif %}">
-          <h3 class="subtle-section">Vorheriger Eintrag</h3>
-          {% include post_preview.html post=page.previous %}
+        <div class="{% if cols == 2 %}col-md-6{% else %}cols-md-12{% endif %}">
+			<a href="{{ site.baseurl }}{{ page.previous.url |replace_first:'/',''}}">
+          <h3 class="subtle-section"><i class="icon-left-open"></i> Vorheriger Beitrag</h3>
+				</a>
+          {% include post_preview_small.html post=page.previous %}
         </div>
       {% endif %}
       {% if page.next.url %}
-        <div class="{% if cols == 2 %}col-xs-6{% else %}cols-xs-12{% endif %}">
-          <h3 class="subtle-section">Nächster Eintrag</h3>
-          {% include post_preview.html post=page.next %}
+        <div class="{% if cols == 2 %}col-md-6{% else %}cols-md-12{% endif %}">
+          <a href="{{ site.baseurl }}{{ page.next.url |replace_first:'/',''}}">
+          	<h3 class="subtle-section">Nächster Beitrag <i class="icon-right-open"></i></h3>
+		  </a>
+          {% include post_preview_small.html post=page.next %}
         </div>
       {% endif %}
     </div>
